--- a/gastos.html
+++ b/gastos.html
@@ -166,6 +166,7 @@
                     <option value="Gasto">Gasto</option>
                     <option value="Costo">Costo</option>
                     <option value="Gasto Financiero">Gasto Financiero</option>
+                    <option value="Gasto Contable">Gasto Contable</option>
                     <option value="Pago de Pasivo">Pago de Pasivo</option>
                 </select>
             </div>
@@ -243,6 +244,7 @@
                         <option value="Gasto">Gasto</option>
                         <option value="Costo">Costo</option>
                         <option value="Gasto Financiero">Gasto Financiero</option>
+                        <option value="Gasto Contable">Gasto Contable</option>
                         <option value="Pago de Pasivo">Pago de Pasivo</option>
                     </select>
                 </div>
