--- a/ingresos.html
+++ b/ingresos.html
@@ -190,12 +190,10 @@
                             <th class="px-6 py-5 w-[12%]">Transacción #</th>
                             <th class="px-6 py-5 w-[10%] text-center">Tipo</th>
                             <th class="px-6 py-5 w-[10%] text-center">Sucursal</th>
-                            <th class="px-6 py-5 w-[10%] text-center">Método</th>
+                            <th class="px-6 py-5 w-[12%] text-center">Método</th>
                             <th class="px-6 py-5 w-[15%] text-center">Cliente</th>
-                            <th class="px-6 py-5 w-[10%] text-right text-red-400">Comisión</th>
-                            <th class="px-6 py-5 w-[11%] text-right">Bruto</th>
-                            <th class="px-6 py-5 w-[11%] text-right text-primary">Monto Neto</th>
-                            <th class="px-6 py-5 w-[11%] text-center">Acciones</th>
+                            <th class="px-6 py-5 w-[15%] text-right text-primary">Monto</th>
+                            <th class="px-6 py-5 w-[16%] text-center">Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="tablaIngresos" class="divide-y divide-gray-50">
