--- a/inversiones.html
+++ b/inversiones.html
@@ -103,8 +103,11 @@
                 <p class="text-gray-400 font-bold text-[10px] uppercase tracking-widest mb-2">Depreciación Mensual Est.
                 </p>
                 <span id="depreciacionEst" class="text-2xl font-extrabold text-red-500">-$0.00</span>
-                <div class="mt-2 text-[10px] font-bold text-red-400 flex items-center gap-1">
-                    <span class="material-symbols-outlined text-xs">trending_up</span> +5.2% vs mes anterior
+                <div class="mt-2 flex items-center gap-2">
+                    <button onclick="generarDepreciacionManual()"
+                        class="text-[9px] font-black uppercase bg-red-50 text-red-600 px-3 py-1.5 rounded-lg hover:bg-red-100 transition-all flex items-center gap-1">
+                        <span class="material-symbols-outlined text-xs">add_circle</span> Registrar en Gastos
+                    </button>
                 </div>
                 <span class="material-symbols-outlined absolute top-6 right-6 text-red-400/20">show_chart</span>
             </div>
