--- a/ingresos.html
+++ b/ingresos.html
@@ -180,25 +180,92 @@
             </button>
         </div>
 
-        <div class="card overflow-hidden shadow-sm">
-            <div class="overflow-x-auto">
-                <table class="w-full text-left">
-                    <thead
-                        class="bg-gray-50 text-gray-400 text-[10px] font-black uppercase tracking-[0.2em] border-b border-gray-100">
-                        <tr>
-                            <th class="px-6 py-5 w-[10%]">Fecha</th>
-                            <th class="px-6 py-5 w-[12%]">Transacción #</th>
-                            <th class="px-6 py-5 w-[10%] text-center">Tipo</th>
-                            <th class="px-6 py-5 w-[10%] text-center">Sucursal</th>
-                            <th class="px-6 py-5 w-[12%] text-center">Método</th>
-                            <th class="px-6 py-5 w-[15%] text-center">Cliente</th>
-                            <th class="px-6 py-5 w-[15%] text-right text-primary">Monto</th>
-                            <th class="px-6 py-5 w-[16%] text-center">Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tablaIngresos" class="divide-y divide-gray-50">
-                    </tbody>
-                </table>
+        <!-- TABLAS POR SUCURSAL -->
+        <div id="tablasContainer" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+            <!-- SUCURSAL SUR -->
+            <div class="space-y-3">
+                <h4 class="text-xs font-black uppercase tracking-widest text-gray-500 flex items-center gap-2">
+                    <span class="w-3 h-3 rounded-full bg-blue-500"></span> Sucursal Sur
+                    <span id="contadorSur" class="text-[10px] text-gray-400 font-bold">(0 registros)</span>
+                </h4>
+                <!-- KPIs Sur -->
+                <div class="grid grid-cols-3 gap-2">
+                    <div class="bg-blue-50/70 rounded-xl p-3 border border-blue-100">
+                        <p class="text-[8px] font-bold text-blue-400 uppercase tracking-widest">Total Sur</p>
+                        <p id="kpiTotalSur" class="text-lg font-black text-blue-600">$0</p>
+                    </div>
+                    <div class="bg-white rounded-xl p-3 border border-gray-100">
+                        <p class="text-[8px] font-bold text-gray-400 uppercase tracking-widest">Ticket Prom</p>
+                        <p id="kpiTicketSur" class="text-lg font-black text-gray-700">$0</p>
+                    </div>
+                    <div class="bg-white rounded-xl p-3 border border-gray-100">
+                        <p class="text-[8px] font-bold text-gray-400 uppercase tracking-widest">Transacciones</p>
+                        <p id="kpiTxnSur" class="text-lg font-black text-gray-700">0</p>
+                    </div>
+                </div>
+                <div class="card overflow-hidden shadow-sm border-l-4 border-blue-500">
+                    <div class="overflow-x-auto max-h-[500px] overflow-y-auto">
+                        <table class="w-full text-left">
+                            <thead
+                                class="bg-gray-50 text-gray-400 text-[9px] font-black uppercase tracking-[0.15em] border-b border-gray-100 sticky top-0">
+                                <tr>
+                                    <th class="px-4 py-4">Fecha</th>
+                                    <th class="px-4 py-4 text-center">Txn #</th>
+                                    <th class="px-4 py-4 text-center">Tipo</th>
+                                    <th class="px-4 py-4 text-center">Método</th>
+                                    <th class="px-4 py-4 text-center">Cliente</th>
+                                    <th class="px-4 py-4 text-right">Monto</th>
+                                    <th class="px-4 py-4 text-center">Acc.</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tablaIngresosSur" class="divide-y divide-gray-50 text-xs">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SUCURSAL NORTE -->
+            <div class="space-y-3">
+                <h4 class="text-xs font-black uppercase tracking-widest text-gray-500 flex items-center gap-2">
+                    <span class="w-3 h-3 rounded-full bg-purple-500"></span> Sucursal Norte
+                    <span id="contadorNorte" class="text-[10px] text-gray-400 font-bold">(0 registros)</span>
+                </h4>
+                <!-- KPIs Norte -->
+                <div class="grid grid-cols-3 gap-2">
+                    <div class="bg-purple-50/70 rounded-xl p-3 border border-purple-100">
+                        <p class="text-[8px] font-bold text-purple-400 uppercase tracking-widest">Total Norte</p>
+                        <p id="kpiTotalNorte" class="text-lg font-black text-purple-600">$0</p>
+                    </div>
+                    <div class="bg-white rounded-xl p-3 border border-gray-100">
+                        <p class="text-[8px] font-bold text-gray-400 uppercase tracking-widest">Ticket Prom</p>
+                        <p id="kpiTicketNorte" class="text-lg font-black text-gray-700">$0</p>
+                    </div>
+                    <div class="bg-white rounded-xl p-3 border border-gray-100">
+                        <p class="text-[8px] font-bold text-gray-400 uppercase tracking-widest">Transacciones</p>
+                        <p id="kpiTxnNorte" class="text-lg font-black text-gray-700">0</p>
+                    </div>
+                </div>
+                <div class="card overflow-hidden shadow-sm border-l-4 border-purple-500">
+                    <div class="overflow-x-auto max-h-[500px] overflow-y-auto">
+                        <table class="w-full text-left">
+                            <thead
+                                class="bg-gray-50 text-gray-400 text-[9px] font-black uppercase tracking-[0.15em] border-b border-gray-100 sticky top-0">
+                                <tr>
+                                    <th class="px-4 py-4">Fecha</th>
+                                    <th class="px-4 py-4 text-center">Txn #</th>
+                                    <th class="px-4 py-4 text-center">Tipo</th>
+                                    <th class="px-4 py-4 text-center">Método</th>
+                                    <th class="px-4 py-4 text-center">Cliente</th>
+                                    <th class="px-4 py-4 text-right">Monto</th>
+                                    <th class="px-4 py-4 text-center">Acc.</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tablaIngresosNorte" class="divide-y divide-gray-50 text-xs">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
 
