--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#19e66b",
+                        primary: "var(--theme-color)",
                         "background-dark": "#112117",
                     },
                     fontFamily: { "display": ["Manrope"] },
