--- a/nueva_compra.html
+++ b/nueva_compra.html
@@ -11,7 +11,7 @@
         tailwind.config = {
             theme: {
                 extend: {
-                    colors: { primary: "#19e66b" },
+                    colors: { primary: "var(--theme-color)" },
                     fontFamily: { sans: ["Manrope", "sans-serif"] },
                 },
             },
