--- a/rrhh_analytics.html
+++ b/rrhh_analytics.html
@@ -12,7 +12,7 @@
         tailwind.config = {
             theme: {
                 extend: {
-                    colors: { primary: "#19e66b", background: "#f8fafc" },
+                    colors: { primary: "var(--theme-color)", background: "#f8fafc" },
                     fontFamily: { sans: ["Manrope", "sans-serif"] },
                 },
             },
