--- a/gastos.html
+++ b/gastos.html
@@ -15,7 +15,7 @@
         tailwind.config = {
             theme: {
                 extend: {
-                    colors: { primary: "#19e66b", background: "#f8faf9", sidebar: "#ffffff" },
+                    colors: { primary: "var(--theme-color)", background: "#f8faf9", sidebar: "#ffffff" },
                     fontFamily: { sans: ["Manrope", "sans-serif"] },
                 },
             },
