--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="light" lang="es">
 
 <head>
+    <script src="config.js"></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Login - Agrigarden Financial</title>
