--- a/prestamos.html
+++ b/prestamos.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <script src="config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Módulo de Préstamos - Agrigarden</title>
