--- a/sync_pagos_historicos.html
+++ b/sync_pagos_historicos.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
 <head>
+    <script src="config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sincronizar Pagos Históricos</title>
