--- a/migrador_datos.html
+++ b/migrador_datos.html
@@ -76,10 +76,16 @@
         </div>
 
         <div class="pt-4 border-t border-gray-100 flex flex-col gap-4">
-            <button id="btnSync" onclick="startSync()"
-                class="w-full gradient-bg text-background-dark font-black py-4 rounded-2xl shadow-xl shadow-green-200 hover:scale-[1.02] transition-all uppercase tracking-widest text-sm">
-                Iniciar Clonación de Datos
-            </button>
+            <div class="grid grid-cols-2 gap-4">
+                <button id="btnSync" onclick="startSync()"
+                    class="gradient-bg text-background-dark font-black py-4 rounded-2xl shadow-xl shadow-green-200 hover:scale-[1.02] transition-all uppercase tracking-widest text-xs">
+                    🔄 Sincronizar Todo
+                </button>
+                <button id="btnCheck" onclick="checkSchema()"
+                    class="bg-blue-600 text-white font-black py-4 rounded-2xl shadow-xl shadow-blue-200 hover:scale-[1.02] transition-all uppercase tracking-widest text-xs">
+                    🛠 Verificar Tablas
+                </button>
+            </div>
 
             <div id="diagnosticPanel" class="hidden bg-slate-900 rounded-3xl p-6 text-white space-y-4">
                 <h3 class="font-bold border-b border-gray-700 pb-2">Diagnóstico de Datos en Staging 🧐</h3>
@@ -266,6 +272,117 @@
             btn.classList.remove('bg-gray-400');
             btn.classList.add('bg-green-500', 'text-white');
             btn.innerText = '¡Sincronización y Diagnóstico Completados!';
+        }
+
+        async function checkSchema() {
+            const btn = document.getElementById('btnCheck');
+            btn.disabled = true;
+            btn.innerText = 'Verificando...';
+
+            const panel = document.getElementById('diagnosticPanel');
+            const results = document.getElementById('diagnosticResults');
+            panel.classList.remove('hidden');
+            results.innerHTML = '';
+
+            let missingCount = 0;
+            let okCount = 0;
+
+            let html = '<div class="space-y-1">';
+
+            for (const table of TABLES) {
+                try {
+                    // Fetch count only (head: true)
+                    const { count, error } = await testClient.from(table).select('*', { count: 'exact', head: true });
+
+                    if (error) {
+                        console.warn(`Verificando ${table}:`, error);
+                        html += `
+                        <div class="flex justify-between items-center bg-red-900/30 p-2 rounded border border-red-800">
+                            <span class="text-red-300 font-mono text-[10px]">${table}</span>
+                            <span class="text-[9px] bg-red-600 text-white px-1 rounded">ERROR ${error.code || ''}</span>
+                        </div>`;
+                        missingCount++;
+                    } else {
+                        const countClass = count === 0 ? 'bg-yellow-600 text-white' : 'bg-green-600 text-white';
+                        const countLabel = count === 0 ? 'VACÍA (0)' : `DATOS (${count})`;
+
+                        html += `
+                        <div class="flex justify-between items-center bg-green-900/30 p-2 rounded border border-green-800">
+                            <span class="text-green-300 font-mono text-[10px]">${table}</span>
+                            <span class="text-[9px] ${countClass} px-1 rounded font-bold">${countLabel}</span>
+                        </div>`;
+                        okCount++;
+                    }
+                } catch (e) {
+                    html += `
+                        <div class="flex justify-between items-center bg-red-900/30 p-2 rounded border border-red-800">
+                            <span class="text-red-300 font-mono text-[10px]">${table}</span>
+                            <span class="text-[9px] bg-red-600 text-white px-1 rounded">EXCEPTION</span>
+                        </div>`;
+                    missingCount++;
+                }
+            }
+            html += '</div>';
+
+            // --- NUEVO: INSPECCIÓN DE DATOS (Dates/Sucursal from Transacciones & Gastos) ---
+            html += '<div class="mt-4 pt-4 border-t border-gray-700">';
+            html += '<h4 class="text-xs font-bold text-blue-300 mb-2">🔍 INSPECCIÓN DE DATOS (Muestra 5 recientes)</h4>';
+
+            const tablesToInspect = ['transacciones', 'gastos'];
+            for (const tName of tablesToInspect) {
+                const { data: samples, error: sErr } = await testClient
+                    .from(tName)
+                    .select('created_at, sucursal, monto, monto_total')
+                    .order('created_at', { ascending: false })
+                    .limit(5);
+
+                html += `<div class="mb-3 bg-slate-800 p-2 rounded text-[10px] font-mono">`;
+                html += `<strong class="text-yellow-400 uppercase">> ${tName}</strong>`;
+
+                if (sErr) {
+                    html += `<div class="text-red-400">Error fetch: ${sErr.message}</div>`;
+                } else if (!samples || samples.length === 0) {
+                    html += `<div class="text-gray-500 italic">Sin registros para mostrar.</div>`;
+                } else {
+                    samples.forEach(r => {
+                        const m = r.monto || r.monto_total || 0;
+                        const date = r.created_at ? r.created_at.substring(0, 10) : 'N/A';
+                        const suc = r.sucursal || 'NULL';
+                        html += `<div class="flex justify-between border-b border-gray-700 pb-1 mt-1 text-gray-300">
+                                    <span>${date} | ${suc}</span>
+                                    <span>$${m}</span>
+                                  </div>`;
+                    });
+
+                    // Range check
+                    const dates = samples.map(s => s.created_at.substring(0, 4)); // YYYY
+                    const uniqueYears = [...new Set(dates)];
+                    html += `<div class="mt-1 text-blue-200">Años detectados: ${uniqueYears.join(', ')}</div>`;
+                }
+                html += `</div>`;
+            }
+            html += '</div>';
+            // --------------------------------------------------------------------------
+
+            results.innerHTML = `
+                <div class="mb-4 flex gap-4 text-xs font-bold">
+                    <span class="text-green-400">✅ OK: ${okCount}</span>
+                    <span class="text-red-400">❌ PROBLEM: ${missingCount}</span>
+                </div>
+                ${html}
+            `;
+
+            if (missingCount > 0) {
+                results.innerHTML += `
+                    <div class="mt-4 p-3 bg-red-600 text-white font-bold text-center rounded-xl animate-pulse">
+                        ⚠️ ATENCIÓN: Faltan tablas en el entorno de pruebas.
+                        <br>La sincronización fallará hasta que se creen.
+                    </div>
+                 `;
+            }
+
+            btn.disabled = false;
+            btn.innerText = '🛠 Verificar Tablas';
         }
 
         function updateStatus(table, text, colorClass, percent) {
