--- a/control_efectivo.html
+++ b/control_efectivo.html
@@ -2,8 +2,6 @@
 <html lang="es">
 
 <head>
-    <script src="config.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Control de Efectivo - Agrigarden</title>
@@ -50,63 +48,64 @@
         <header class="flex justify-between items-center">
             <div>
                 <h1 class="text-4xl font-extrabold tracking-tight italic uppercase">Control de Efectivo</h1>
-                <p class="text-gray-400 font-medium">Monitoreo de flujo de caja por sucursal</p>
+                <p class="text-gray-400 font-medium">Monitoreo de flujo de caja y disponibilidad física</p>
             </div>
-            <div>
-                <button onclick="window.location.reload()"
-                    class="p-3 bg-white px-6 rounded-xl border border-gray-200 hover:bg-gray-50 transition-all text-gray-500 font-bold text-xs uppercase flex items-center gap-2 shadow-sm">
-                    <span class="material-symbols-outlined text-lg">refresh</span> Actualizar
+            <div class="flex items-center gap-4">
+                <button onclick="window.print()"
+                    class="bg-white border border-gray-300 px-5 py-3 rounded-xl font-bold flex items-center gap-2 text-sm hover:bg-gray-50 transition-all shadow-sm">
+                    <span class="material-symbols-outlined text-lg">print</span> Imprimir Reporte
                 </button>
             </div>
         </header>
-
-        <!-- DEBUG PANEL -->
-        <div id="debugContent"
-            class="bg-slate-900 p-4 rounded-xl font-mono text-[10px] text-gray-400 max-h-32 overflow-y-auto mb-4 hidden md:block">
-            <div>Esperando inicio del script...</div>
-        </div>
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
 
             <!-- COLUMNA NORTE -->
             <div class="space-y-6">
-                <div class="flex items-center gap-3">
-                    <div class="w-4 h-4 rounded-full bg-purple-500 shadow-lg shadow-purple-200"></div>
-                    <h2 class="text-xl font-black uppercase italic tracking-wider text-purple-900">Sucursal Norte</h2>
+                <div class="flex items-center gap-2 mb-2">
+                    <div class="w-3 h-3 rounded-full bg-blue-500"></div>
+                    <h2 class="text-xl font-black text-blue-900 uppercase tracking-tight">Sucursal Norte</h2>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4">
-                    <div class="card p-6 bg-purple-50 border-purple-100">
-                        <p class="text-[9px] font-black text-purple-400 uppercase tracking-widest mb-1">Saldo Inicial
-                        </p>
-                        <p id="kpiSaldo_Norte" class="text-2xl font-black text-purple-700">$0.00</p>
+                <!-- KPIs NORTE -->
+                <div class="grid grid-cols-2 gap-3">
+                    <div class="card p-4 shadow-sm bg-gray-50">
+                        <p class="text-gray-400 font-bold text-[9px] uppercase tracking-widest mb-1">Saldo Inicial</p>
+                        <span id="kpiSaldo_Norte" class="text-lg font-extrabold text-gray-600">$0.00</span>
                     </div>
-                    <div class="card p-6 border-emerald-100">
-                        <p class="text-[9px] font-black text-emerald-500 uppercase tracking-widest mb-1">Entradas
-                            (Ventas)</p>
-                        <p id="kpiEntradas_Norte" class="text-2xl font-black text-emerald-600">$0.00</p>
+                    <div class="card p-4 shadow-sm bg-gray-900">
+                        <p class="text-white/60 font-bold text-[9px] uppercase tracking-widest mb-1">Disponible Real</p>
+                        <span id="kpiDisponible_Norte" class="text-lg font-black text-primary">$0.00</span>
                     </div>
-                    <div class="card p-6 border-red-100">
-                        <p class="text-[9px] font-black text-red-400 uppercase tracking-widest mb-1">Salidas (Gastos)
-                        </p>
-                        <p id="kpiSalidas_Norte" class="text-2xl font-black text-red-600">$0.00</p>
+                    <div class="card p-4 shadow-sm border-green-100 bg-green-50/30">
+                        <p class="text-green-600 font-bold text-[9px] uppercase tracking-widest mb-1">Entradas</p>
+                        <span id="kpiEntradas_Norte" class="text-lg font-extrabold text-green-700">$0.00</span>
                     </div>
-                    <div class="card p-6 bg-gray-900 text-white border-none shadow-xl shadow-gray-200">
-                        <p class="text-[9px] font-black text-gray-400 uppercase tracking-widest mb-1">Disponible Real
-                        </p>
-                        <p id="kpiDisponible_Norte" class="text-3xl font-black text-white">$0.00</p>
+                    <div class="card p-4 shadow-sm border-red-100 bg-red-50/30">
+                        <p class="text-red-600 font-bold text-[9px] uppercase tracking-widest mb-1">Salidas</p>
+                        <span id="kpiSalidas_Norte" class="text-lg font-extrabold text-red-700">$0.00</span>
                     </div>
                 </div>
 
-                <div class="card overflow-hidden h-[600px] flex flex-col">
-                    <div class="bg-gray-50 border-b border-gray-100 p-4">
-                        <h3 class="text-xs font-black uppercase text-gray-500 tracking-widest">Movimientos Recientes
-                        </h3>
+                <!-- TABLA NORTE -->
+                <div class="card overflow-hidden shadow-sm">
+                    <div class="p-4 border-b border-gray-100 bg-blue-50/10">
+                        <h3 class="font-bold text-gray-700 uppercase text-xs tracking-wide">Movimientos Norte</h3>
                     </div>
-                    <div class="overflow-y-auto flex-1">
+                    <div class="overflow-x-auto max-h-[500px] overflow-y-auto">
                         <table class="w-full text-left">
+                            <thead
+                                class="bg-white text-gray-400 text-[9px] font-black uppercase tracking-wider border-b border-gray-100 sticky top-0 bg-white">
+                                <tr>
+                                    <th class="px-4 py-3">Fecha</th>
+                                    <th class="px-4 py-3">Concepto</th>
+                                    <th class="px-4 py-3 text-right">Monto</th>
+                                </tr>
+                            </thead>
                             <tbody id="tablaMovimientos_Norte" class="divide-y divide-gray-50 text-xs">
-                                <!-- JS inserts rows here -->
+                                <tr>
+                                    <td colspan="3" class="p-6 text-center text-gray-300 italic">Cargando...</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -115,42 +114,50 @@
 
             <!-- COLUMNA SUR -->
             <div class="space-y-6">
-                <div class="flex items-center gap-3">
-                    <div class="w-4 h-4 rounded-full bg-blue-500 shadow-lg shadow-blue-200"></div>
-                    <h2 class="text-xl font-black uppercase italic tracking-wider text-blue-900">Sucursal Sur</h2>
+                <div class="flex items-center gap-2 mb-2">
+                    <div class="w-3 h-3 rounded-full bg-green-500"></div>
+                    <h2 class="text-xl font-black text-green-900 uppercase tracking-tight">Sucursal Sur</h2>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4">
-                    <div class="card p-6 bg-blue-50 border-blue-100">
-                        <p class="text-[9px] font-black text-blue-400 uppercase tracking-widest mb-1">Saldo Inicial</p>
-                        <p id="kpiSaldo_Sur" class="text-2xl font-black text-blue-700">$0.00</p>
+                <!-- KPIs SUR -->
+                <div class="grid grid-cols-2 gap-3">
+                    <div class="card p-4 shadow-sm bg-gray-50">
+                        <p class="text-gray-400 font-bold text-[9px] uppercase tracking-widest mb-1">Saldo Inicial</p>
+                        <span id="kpiSaldo_Sur" class="text-lg font-extrabold text-gray-600">$0.00</span>
                     </div>
-                    <div class="card p-6 border-emerald-100">
-                        <p class="text-[9px] font-black text-emerald-500 uppercase tracking-widest mb-1">Entradas
-                            (Ventas)</p>
-                        <p id="kpiEntradas_Sur" class="text-2xl font-black text-emerald-600">$0.00</p>
+                    <div class="card p-4 shadow-sm bg-gray-900">
+                        <p class="text-white/60 font-bold text-[9px] uppercase tracking-widest mb-1">Disponible Real</p>
+                        <span id="kpiDisponible_Sur" class="text-lg font-black text-primary">$0.00</span>
                     </div>
-                    <div class="card p-6 border-red-100">
-                        <p class="text-[9px] font-black text-red-400 uppercase tracking-widest mb-1">Salidas (Gastos)
-                        </p>
-                        <p id="kpiSalidas_Sur" class="text-2xl font-black text-red-600">$0.00</p>
+                    <div class="card p-4 shadow-sm border-green-100 bg-green-50/30">
+                        <p class="text-green-600 font-bold text-[9px] uppercase tracking-widest mb-1">Entradas</p>
+                        <span id="kpiEntradas_Sur" class="text-lg font-extrabold text-green-700">$0.00</span>
                     </div>
-                    <div class="card p-6 bg-gray-900 text-white border-none shadow-xl shadow-gray-200">
-                        <p class="text-[9px] font-black text-gray-400 uppercase tracking-widest mb-1">Disponible Real
-                        </p>
-                        <p id="kpiDisponible_Sur" class="text-3xl font-black text-white">$0.00</p>
+                    <div class="card p-4 shadow-sm border-red-100 bg-red-50/30">
+                        <p class="text-red-600 font-bold text-[9px] uppercase tracking-widest mb-1">Salidas</p>
+                        <span id="kpiSalidas_Sur" class="text-lg font-extrabold text-red-700">$0.00</span>
                     </div>
                 </div>
 
-                <div class="card overflow-hidden h-[600px] flex flex-col">
-                    <div class="bg-gray-50 border-b border-gray-100 p-4">
-                        <h3 class="text-xs font-black uppercase text-gray-500 tracking-widest">Movimientos Recientes
-                        </h3>
+                <!-- TABLA SUR -->
+                <div class="card overflow-hidden shadow-sm">
+                    <div class="p-4 border-b border-gray-100 bg-green-50/10">
+                        <h3 class="font-bold text-gray-700 uppercase text-xs tracking-wide">Movimientos Sur</h3>
                     </div>
-                    <div class="overflow-y-auto flex-1">
+                    <div class="overflow-x-auto max-h-[500px] overflow-y-auto">
                         <table class="w-full text-left">
+                            <thead
+                                class="bg-white text-gray-400 text-[9px] font-black uppercase tracking-wider border-b border-gray-100 sticky top-0 bg-white">
+                                <tr>
+                                    <th class="px-4 py-3">Fecha</th>
+                                    <th class="px-4 py-3">Concepto</th>
+                                    <th class="px-4 py-3 text-right">Monto</th>
+                                </tr>
+                            </thead>
                             <tbody id="tablaMovimientos_Sur" class="divide-y divide-gray-50 text-xs">
-                                <!-- JS inserts rows here -->
+                                <tr>
+                                    <td colspan="3" class="p-6 text-center text-gray-300 italic">Cargando...</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -163,18 +170,24 @@
             © 2026 Agrigarden Financial Systems
         </footer>
 
-    </main>
-
+        <script src="config.js"></script>
     <script src="api.js"></script>
-    <script src="auth.js"></script>
-    <script src="menu.js"></script>
-    <script src="control_efectivo.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            inyectarMenu('cortecaja'); // Assuming 'cortecaja' is the menu ID for this page
-            if (typeof cargarControlEfectivo === 'function') cargarControlEfectivo();
-        });
-    </script>
+        <script src="auth.js"></script>
+        <script src="menu.js"></script>
+        <script src="configuracion.js"></script> <!-- Reutilizamos lógica de config -->
+        <script src="control_efectivo.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                try {
+                    if (typeof inyectarMenu === 'function') inyectarMenu('efectivo');
+                    if (typeof cargarControlEfectivo === 'function') {
+                        cargarControlEfectivo();
+                    }
+                } catch (e) {
+                    console.error("Error en inicialización:", e);
+                }
+            });
+        </script>
 </body>
 
 </html>
