--- a/compras.html
+++ b/compras.html
@@ -415,6 +415,14 @@
                             <span class="text-gray-400 font-bold">Límite:</span>
                             <span id="gesFechaLim" class="font-bold text-red-500"></span>
                         </div>
+                        <div class="flex justify-between text-xs border-b border-gray-200 pb-2">
+                            <span class="text-gray-400 font-bold">Cotizado:</span>
+                            <span id="gesFechaCot" class="font-bold text-blue-600">-</span>
+                        </div>
+                        <div class="flex justify-between text-xs border-b border-gray-200 pb-2">
+                            <span class="text-gray-400 font-bold">Aceptado:</span>
+                            <span id="gesFechaAce" class="font-bold text-green-600">-</span>
+                        </div>
                         <div class="flex justify-between text-xs">
                             <span class="text-gray-400 font-bold">Cantidad:</span>
                             <span id="gesCantidad" class="font-bold"></span>
