--- a/compras.html
+++ b/compras.html
@@ -181,7 +181,7 @@
                     <thead
                         class="bg-gray-50 text-[10px] font-black uppercase text-gray-400 tracking-widest border-b border-gray-100">
                         <tr>
-                            <th class="px-6 py-5">Fecha / Límite</th>
+                            <th class="px-6 py-5">Fechas Clave</th>
                             <th class="px-6 py-5">Pieza / Código</th>
                             <th class="px-6 py-5">Proveedor</th>
                             <th class="px-6 py-5">Marca</th>
